syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";
option go_package = "github.com/noueii/gonuxt-starter/internal/pb";

message MeResponse {
  string id = 1;
  google.protobuf.Timestamp expires_at = 2;
  User user = 3;
}

message MeRequest {}


