syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/noueii/gonuxt-starter/internal/pb";


message User {
  string id = 1;
  string email = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
  string role = 5;
}
